@@ -13,9 +13,12 @@ GNU/Linux:
     Fixed get_l2cap_options(), set_l2cap_options(), set_l2cap_mtu()
     Added abovementioned functions as socket methods
     Added BT_SECURITY_*, L2CAP_MODE_* constants
+    Added support for the "Extended Inquiry Response" event in the asynchronous
+      DeviceDiscoverer (Lukas Hetzenecker)
 
 windows:
     Allow threads during the initialization of the inquiry in widcomm
+      (Lukas Hetzenecker)
 
 changes from 0.17 to 0.18 (Nov 25, 2009)
 ----------------------------------------
